# rd-SCADA-cycloneDDScxx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RigConfig.json  cross-toolchain-msys2.cmake  cross-toolchain.cmake  deploy.sh  main.cpp  networkDataStructures.idl  rdSCADA.service  systemDifferences.h.in
Notes/: crosscompile_instructions.txt  gitSneakernetCommands.txt
ddsPubSubExamples/: publisher.cpp  subscriber.cpp
include/: definitions.h  fileChecks.hpp  macro_definitions.h  systemDifferences.h
include/DDSsources/: networkDataStructures.cpp  networkDataStructures.hpp
include/FIR/: FIR_ds.cpp  FIR_ds.h  test_timer.hpp
include/FIR/coeffHeaders/: 10xCoeffs.h
include/PID/: PID_V1.cpp  PID_V1.h
include/UeiPacUtils/: UeiPacUtils.c  UeiPacUtils.h
include/csvIO/: datasaver.hpp
include/decimation/: decimator.cpp  decimator.h
include/display/: tui.hpp
include/hardwareInterface/: getdata.cpp  getdata.h
include/networkData/: networkData.cpp  networkData.h
include/physicalCalculations/: physicalCalculations_V1.cpp  physicalCalculations_V1.h
include/queueTemplate/: queueTemplates.hpp
include/rigSim/: rigSim.cpp  rigSim.h
